<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Data to make available to the XML via data binding. In this case,
         the whole ViewModel, so that we can access the LiveData,
         click handlers, and state variables. -->
    <data>
        <variable
            name="loginViewModel"
            type="com.example.teamplanningapp.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        tools:context=".login.LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/worker_imageview"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="104dp"
            android:transitionName="worker_imageview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_workforce" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_rounded_corners"
            android:onClick="@{() -> loginViewModel.onSignUpClick()}"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:transitionName="login_button"
            app:finalCornerAngle="50dp"
            app:initialCornerAngle="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutPassword"
            app:spinning_bar_color="#FFFFFF"
            app:spinning_bar_padding="2dp"
            app:spinning_bar_width="3dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@color/primaryTextColor"
            app:boxStrokeColor="@color/primaryTextColorTransparent50"
            app:errorEnabled="true"
            app:errorIconTint="@color/customLightRed"
            app:errorTextColor="@color/customLightRed"
            app:hasError="@{safeUnbox(loginViewModel.errorEmail)}"
            app:hintTextColor="@color/primaryTextColor"
            app:layout_constraintBottom_toTopOf="@+id/layoutPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/worker_imageview">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_user_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:singleLine="true"
                android:text="@={loginViewModel.emailValue}"
                android:textColor="@color/primaryTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@color/primaryTextColor"
            app:boxStrokeColor="@color/primaryTextColorTransparent50"
            app:errorEnabled="true"
            app:errorIconTint="@color/customLightRed"
            app:errorTextColor="@color/customLightRed"
            app:hasError="@{safeUnbox(loginViewModel.errorPassword)}"
            app:hintTextColor="@color/primaryTextColor"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:singleLine="true"
                android:text="@={loginViewModel.passwordValue}"
                android:textColor="@color/primaryTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/primaryTextColor"
            android:textSize="15sp"
            app:layout_constraintHorizontal_weight="0.7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/sign_up"
            app:layout_constraintHorizontal_weight="0.3"
            android:textColor="@color/primaryTextColor"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>